dockerfile working
docker build --tag=ge .
docker run -p 127.0.0.1:8080:8080 g